--- a/MyTiKi/app/src/main/res/layout/activity_cart.xml
+++ b/MyTiKi/app/src/main/res/layout/activity_cart.xml
@@ -42,11 +42,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/colorWhiteBG"
-        app:layout_constraintTop_toBottomOf="@+id/tb_cart"
         app:layout_constraintBottom_toTopOf="@+id/tv_line"
+        app:layout_constraintTop_toBottomOf="@+id/tb_cart"
         tools:itemCount="3"
         tools:listitem="@layout/item_product_cart" />
-
 
     <TextView
         android:id="@+id/tv_line"
@@ -104,5 +103,40 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <LinearLayout
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tb_cart"
+        android:id="@+id/ll_list_cart_empty"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="#F8F8F8"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:srcCompat="@drawable/no_voucher" />
+
+        <TextView
+            android:textSize="16sp"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/empty_list" />
+
+        <Button
+            android:id="@+id/btn_continue_shopping_cart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/edit_btn_sign_in"
+            android:text="@string/continue_shopping"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
