--- a/MyTiKi/app/src/main/res/layout/fragment_continue_shopping.xml
+++ b/MyTiKi/app/src/main/res/layout/fragment_continue_shopping.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/ll_list_empty"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="fill_parent"
     android:background="#F8F8F8"
     android:gravity="center"
     android:orientation="vertical">
