--- a/MyTiKi/app/src/main/res/layout/activity_address.xml
+++ b/MyTiKi/app/src/main/res/layout/activity_address.xml
@@ -39,6 +39,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@id/btn_address_continue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
