--- a/MyTiKi/app/src/main/res/layout/item_address.xml
+++ b/MyTiKi/app/src/main/res/layout/item_address.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/ll_product_cart"
+    android:id="@+id/ll_item_address"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="16dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginTop="10dp"
     android:background="@color/colorWhiteBG">
 
     <RadioButton
@@ -23,7 +24,7 @@
         android:layout_width="0dp"
         android:textStyle="bold"
         android:textColor="@color/colorTextHint"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="@string/name_sign_up"
@@ -35,7 +36,7 @@
         android:id="@+id/tv_phone_address"
         android:layout_width="0dp"
         android:textColor="@color/colorTextHint"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="@string/name_sign_up"
@@ -48,7 +49,7 @@
         android:id="@+id/tv_real_address"
         android:layout_width="0dp"
         android:textColor="@color/colorTextHint"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="@string/name_sign_up"
@@ -62,9 +63,8 @@
 
     <ImageView
         android:id="@+id/btn_del_address"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_margin="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:padding="15dp"
         android:tint="@color/colorDarkGray"
         app:srcCompat="@drawable/ic_cancel"
@@ -73,9 +73,8 @@
 
     <ImageView
         android:id="@+id/btn_edit_address"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_margin="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:padding="10dp"
         app:srcCompat="@drawable/ic_edit"
         android:tint="@color/colorDarkGray"
