--- a/MyTiKi/app/src/main/res/layout/activity_cart.xml
+++ b/MyTiKi/app/src/main/res/layout/activity_cart.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.cart.activity.CartActivity">
+    tools:context=".main.fragment.user.cart.activity.CartActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/tb_cart"
@@ -104,15 +104,15 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <LinearLayout
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tb_cart"
         android:id="@+id/ll_list_cart_empty"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="#F8F8F8"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tb_cart">
 
         <ImageView
             android:layout_width="200dp"
@@ -120,12 +120,12 @@
             app:srcCompat="@drawable/no_voucher" />
 
         <TextView
-            android:textSize="16sp"
-            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:gravity="center"
-            android:text="@string/empty_list" />
+            android:text="@string/empty_list"
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/btn_continue_shopping_cart"
