--- a/MyTiKi/app/src/main/res/layout/order_activity.xml
+++ b/MyTiKi/app/src/main/res/layout/order_activity.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -18,10 +19,11 @@
             android:linksClickable="true"
             android:onClick="onClickBackToUser"
             android:padding="16dp"
-            android:src="@drawable/ic_left_arrow"
-            android:tint="@android:color/white" />
+            android:tint="@android:color/white"
+            app:srcCompat="@drawable/ic_left_arrow" />
 
         <TextView
+            android:id="@+id/tv_name_toolbar_order"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -31,16 +33,48 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tab_order"
+    <LinearLayout
+        android:id="@+id/ll_order_empty"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        app:tabGravity="fill"
-        app:tabMode="fixed" />
+        android:layout_height="match_parent"
+        android:background="#F8F8F8"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone">
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewPager_order"
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:srcCompat="@drawable/no_voucher" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="@string/empty_list"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/btn_continue_shopping_order"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/edit_btn_sign_in"
+            android:text="@string/continue_shopping"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_list_order"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:background="@color/colorWhiteBG"
+        android:orientation="horizontal"
+        tools:itemCount="3"
+        tools:listitem="@layout/item_order" />
+
+
 </LinearLayout>
