thêm chi tiết đơn hàng

--- a/MyTiKi/app/src/main/res/layout/item_order.xml
+++ b/MyTiKi/app/src/main/res/layout/item_order.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
     android:id="@+id/ll_item_order"
-    android:layout_marginBottom="16dp"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="16dp">
 
     <TextView
         android:id="@+id/tv_line_item_order"
@@ -17,13 +17,13 @@
 
     <TextView
         android:id="@+id/tv_name_item_order"
-        android:maxLines="2"
-        android:ellipsize="end"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:ellipsize="end"
+        android:maxLines="2"
         android:text="@string/name_sign_up"
         android:textColor="@color/colorTextHint"
         android:textSize="16sp"
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_name_item_order" />
 
     <TextView
-        android:id="@+id/tv_item_order_id"
+        android:id="@+id/tv_item_order_detail_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -50,7 +50,7 @@
         app:layout_constraintTop_toTopOf="@id/tv_tt_order_id" />
 
     <TextView
-        android:id="@+id/tv_tt_order_date"
+        android:id="@+id/tv_tt_order_detail_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -59,22 +59,22 @@
         app:layout_constraintTop_toBottomOf="@id/tv_tt_order_id" />
 
     <TextView
-        android:id="@+id/tv_item_order_date"
+        android:id="@+id/tv_item_order_detail_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:text="@string/order_id"
-        app:layout_constraintStart_toEndOf="@id/tv_tt_order_date"
-        app:layout_constraintTop_toTopOf="@id/tv_tt_order_date" />
+        app:layout_constraintStart_toEndOf="@id/tv_tt_order_detail_date"
+        app:layout_constraintTop_toTopOf="@id/tv_tt_order_detail_date" />
 
     <TextView
-        android:id="@+id/tv_tt_order_status"
+        android:id="@+id/tv_tt_order_detail_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/order_status"
         app:layout_constraintStart_toStartOf="@id/tv_name_item_order"
-        app:layout_constraintTop_toBottomOf="@id/tv_tt_order_date" />
+        app:layout_constraintTop_toBottomOf="@id/tv_tt_order_detail_date" />
 
     <TextView
         android:id="@+id/tv_item_order_status"
@@ -83,17 +83,17 @@
         android:layout_marginStart="10dp"
         android:layout_marginBottom="16dp"
         android:text="@string/order_id"
-        app:layout_constraintStart_toEndOf="@id/tv_tt_order_status"
-        app:layout_constraintTop_toTopOf="@id/tv_tt_order_status" />
+        app:layout_constraintStart_toEndOf="@id/tv_tt_order_detail_status"
+        app:layout_constraintTop_toTopOf="@id/tv_tt_order_detail_status" />
 
     <ImageView
         android:id="@+id/iv_order_ic_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toBottomOf="@id/tv_item_order_id"
+        app:layout_constraintBottom_toBottomOf="@id/tv_item_order_detail_id"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tv_item_order_id"
+        app:layout_constraintTop_toTopOf="@id/tv_item_order_detail_id"
         app:srcCompat="@drawable/ic_success" />
 
 
