--- a/MyTiKi/app/src/main/res/layout/user_fragment.xml
+++ b/MyTiKi/app/src/main/res/layout/user_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -8,8 +9,7 @@
             type="com.thuypham.ptithcm.mytiki.main.fragment.user.viewmodel.UserViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/frMainContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -142,29 +142,67 @@
                         android:textColor="@android:color/black"
                         android:textSize="@dimen/ts_name" />
 
-                    <TextView
-                        android:id="@+id/tv_received_order"
+                    <FrameLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="1dp"
-                        android:background="@android:color/white"
-                        android:drawableEnd="@drawable/ic_gray_right_arrow"
-                        android:padding="16dp"
-                        android:text="@string/tv_taken"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/ts_name" />
+                        android:layout_height="wrap_content">
 
-                    <TextView
-                        android:id="@+id/tv_order_waiting_shiping"
+                        <TextView
+                            android:id="@+id/tv_received_order"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="1dp"
+                            android:background="@android:color/white"
+                            android:drawableEnd="@drawable/ic_gray_right_arrow"
+                            android:padding="16dp"
+                            android:text="@string/tv_taken"
+                            android:textColor="@android:color/black"
+                            android:textSize="@dimen/ts_name" />
+
+                        <TextView
+                            android:id="@+id/tv_num_order_recieved_user"
+                            android:layout_width="40dp"
+                            android:layout_height="35dp"
+                            android:layout_gravity="center|end"
+                            android:layout_marginEnd="60dp"
+                            android:background="@drawable/edt_btn_count_number"
+                            android:gravity="center"
+                            android:padding="10dp"
+                            android:text="@string/_1"
+                            android:textColor="@color/colorWhiteBG"
+                            android:textSize="13sp"
+                            android:visibility="gone" />
+                    </FrameLayout>
+
+                    <FrameLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="1dp"
-                        android:background="@android:color/white"
-                        android:drawableEnd="@drawable/ic_gray_right_arrow"
-                        android:padding="16dp"
-                        android:text="@string/wait_shipping"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/ts_name" />
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/tv_order_waiting_shiping"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="1dp"
+                            android:background="@android:color/white"
+                            android:drawableEnd="@drawable/ic_gray_right_arrow"
+                            android:padding="16dp"
+                            android:text="@string/wait_shipping"
+                            android:textColor="@android:color/black"
+                            android:textSize="@dimen/ts_name" />
+
+                        <TextView
+                            android:id="@+id/tv_num_of_list_order_shipping_user"
+                            android:layout_width="40dp"
+                            android:layout_height="35dp"
+                            android:layout_gravity="center|end"
+                            android:layout_marginEnd="60dp"
+                            android:background="@drawable/edt_btn_count_number"
+                            android:gravity="center"
+                            android:padding="10dp"
+                            android:text="@string/_1"
+                            android:textColor="@color/colorWhiteBG"
+                            android:textSize="13sp"
+                            android:visibility="gone" />
+                    </FrameLayout>
 
                     <TextView
                         android:id="@+id/tv_order_success"
