--- a/MyTiKi/app/src/main/res/layout/activity_order_detail.xml
+++ b/MyTiKi/app/src/main/res/layout/activity_order_detail.xml
@@ -23,13 +23,24 @@
             android:tint="@color/colorWhiteBG"
             app:srcCompat="@drawable/ic_left_arrow" />
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/order_information"
-            android:textColor="@color/colorWhiteBG"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="@string/order_information"
+                android:textColor="@color/colorWhiteBG"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <include layout="@layout/ll_cart" />
+
+        </LinearLayout>
 
     </androidx.appcompat.widget.Toolbar>
 
