--- a/MyTiKi/app/src/main/res/layout/activity_product_detail.xml
+++ b/MyTiKi/app/src/main/res/layout/activity_product_detail.xml
@@ -54,14 +54,7 @@
                     android:tint="@color/colorWhiteBG"
                     app:srcCompat="@drawable/ic_select_like" />
 
-                <ImageView
-                    android:id="@+id/btn_cart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:padding="10dp"
-                    android:tint="@color/colorWhiteBG"
-                    app:srcCompat="@drawable/ic_shopping_cart" />
+                <include layout="@layout/ll_cart"/>
 
             </androidx.appcompat.widget.Toolbar>
 
