--- a/MyTiKi/app/src/main/res/layout/activity_product_of_category.xml
+++ b/MyTiKi/app/src/main/res/layout/activity_product_of_category.xml
@@ -28,20 +28,29 @@
             app:srcCompat="@drawable/ic_left_arrow" />
 
 
-        <TextView
-            android:id="@+id/tv_toolbar_product_category"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="48dp"
-            android:background="@drawable/edit_seach_bg"
-            android:drawableStart="@drawable/ic_search"
-            android:drawablePadding="10dp"
-            android:ellipsize="end"
-            android:padding="8dp"
-            android:singleLine="true"
-            android:textColor="@color/colorTextHint"
-            android:textSize="16sp" />
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_toolbar_product_category"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/edit_seach_bg"
+                android:drawableStart="@drawable/ic_search"
+                android:drawablePadding="10dp"
+                android:ellipsize="end"
+                android:padding="8dp"
+                android:singleLine="true"
+                android:textColor="@color/colorTextHint"
+                android:textSize="16sp" />
+
+            <include layout="@layout/ll_cart" />
+
+        </LinearLayout>
 
     </androidx.appcompat.widget.Toolbar>
 
@@ -209,16 +218,16 @@
 
     <TextView
         android:id="@+id/tv_list_empty"
-        android:visibility="gone"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@color/colorWhiteBG"
+        android:gravity="center"
         android:text="@string/product_list_is_empty"
         android:textSize="25sp"
-        android:gravity="center"
-        android:layout_width="0dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_height="0dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar_search_product_category" />
 
 
