tìm kiếm sản phẩm trong danh sách

--- a/MyTiKi/app/src/main/res/layout/activity_cart.xml
+++ b/MyTiKi/app/src/main/res/layout/activity_cart.xml
@@ -107,7 +107,7 @@
         android:id="@+id/ll_list_cart_empty"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#F8F8F8"
+        android:background="@color/colorWhiteBG"
         android:gravity="center"
         android:orientation="vertical"
         android:visibility="gone"
