--- a/MyTiKi/app/src/main/res/layout/home_fragment.xml
+++ b/MyTiKi/app/src/main/res/layout/home_fragment.xml
@@ -48,6 +48,7 @@
                         android:drawableStart="@drawable/ic_search"
                         android:drawablePadding="10dp"
                         android:ellipsize="end"
+                        android:onClick="showSearchFragment"
                         android:padding="8dp"
                         android:singleLine="true"
                         android:text="@string/search"
