--- a/MyTiKi/app/src/main/res/layout/fragment_continue_shopping.xml
+++ b/MyTiKi/app/src/main/res/layout/fragment_continue_shopping.xml
@@ -4,7 +4,7 @@
     android:id="@+id/ll_list_empty"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
-    android:background="#F8F8F8"
+    android:background="@color/colorWhiteBG"
     android:gravity="center"
     android:orientation="vertical">
 
