--- a/MyTiKi/app/src/main/res/layout/order_activity.xml
+++ b/MyTiKi/app/src/main/res/layout/order_activity.xml
@@ -23,22 +23,22 @@
             app:srcCompat="@drawable/ic_left_arrow" />
 
         <LinearLayout
-            android:orientation="horizontal"
-            android:gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tv_name_toolbar_order"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
+                android:layout_weight="1"
                 android:text="@string/order_management"
                 android:textColor="@android:color/white"
                 android:textSize="22sp" />
 
-            <include layout="@layout/ll_cart"/>
+            <include layout="@layout/ll_cart" />
 
         </LinearLayout>
 
@@ -48,7 +48,7 @@
         android:id="@+id/ll_order_empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#F8F8F8"
+        android:background="@color/colorWhiteBG"
         android:gravity="center"
         android:orientation="vertical"
         android:visibility="gone">
