--- a/MyTiKi/app/src/main/res/layout/activity_address.xml
+++ b/MyTiKi/app/src/main/res/layout/activity_address.xml
@@ -27,6 +27,7 @@
             app:srcCompat="@drawable/ic_left_arrow" />
 
         <TextView
+            android:id="@+id/tv_tb_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/shipping_address"
