--- a/MyTiKi/app/src/main/res/layout/activity_cart.xml
+++ b/MyTiKi/app/src/main/res/layout/activity_cart.xml
@@ -124,7 +124,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:gravity="center"
-            android:text="@string/empty_list"
+            android:text="@string/cart_empty"
             android:textSize="16sp" />
 
         <Button
