--- a/MyTiKi/app/src/main/res/layout/activity_order_detail.xml
+++ b/MyTiKi/app/src/main/res/layout/activity_order_detail.xml
@@ -327,6 +327,7 @@
                 android:background="@color/grayLight" />
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/btn_cancel_order_detail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
